kubernetes/apps/observability/goldilocks/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
spec:
  hostnames:
    - "${APP_DOMAIN:=${APP_SUBDOMAIN:=${APP}}.bykaj.app}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: goldilocks-dashboard
          port: 80
